--- a/style.css
+++ b/style.css
@@ -56,12 +56,12 @@
   
   .red {
     background-color: red;
-    color: white;
+    color: rgb(0, 0, 0);
   }
   
   .green {
     background-color: green;
-    color: white;
+    color: rgb(0, 0, 0);
   }
   
   .yellow {
