--- a/style.css
+++ b/style.css
@@ -58,15 +58,15 @@
     background-color: #ddd;
   }
   
-  .green {
-    background-color: #8bc34a;
+  .red {
+    background-color: #f44336; /* Red during rep */
   }
   
-  .red {
-    background-color: #f44336;
+  .green {
+    background-color: #8bc34a; /* Green during mini break */
   }
   
   .yellow {
-    background-color: #ffc107;
+    background-color: #ffc107; /* Yellow during long break */
   }
   
